--- a/meetup-01/presentation/index.html
+++ b/meetup-01/presentation/index.html
@@ -212,7 +212,7 @@
                 </section>
 
                 <section data-background="#4d7e65" data-background-transition="cube" data-transition="linear">
-                    <h3>Los objetos JS no necesitan una estructura específica de Getters y Setters</h3>
+                    <h3>Los objetos no necesitan una estructura especifica de Getters y Setters</h3>
                 </section>
             </section>
 
