Update links slide

--- a/meetup-01/presentation/index.html
+++ b/meetup-01/presentation/index.html
@@ -490,11 +490,9 @@ myApp.directive('taskBox', function () {
 
             <section>
                 <h2>Links</h2>
-                <ul>
-                    <li><a href="http://goo.gl/bL9IoB">http://www.meetup.com/AngularJS-Buenos-Aires/</a></li>
-                    <li><a href="http://goo.gl/WdygrW">https://github.com/juanmanuelarias/angularjs-meetup</a></li>
-                    <li><a href="http://goo.gl/cQ3XVZ">@juanma_ari</a></li>
-                </ul>
+                <a href="http://goo.gl/WdygrW">https://github.com/juanmanuelarias/angularjs-meetup</a>
+                <a href="http://goo.gl/bL9IoB">http://www.meetup.com/AngularJS-Buenos-Aires/</a>
+                <a href="http://goo.gl/cQ3XVZ">@juanma_ari</a>
             </section>
 
             <script src="lib/js/head.min.js"></script>
