Add twitter hashtag

--- a/meetup-01/presentation/index.html
+++ b/meetup-01/presentation/index.html
@@ -43,6 +43,12 @@
             </section>
 
             <section>
+                <h2>Twitter</h2>
+                <h3>@founderspalermo</h3>
+                <h3>#AngularJSBA</h3>
+            </section>
+
+            <section>
                 <h2>El espíritu de este meetup</h2>
                 <p>Compartir experiencias, intercambiar ideas, generar un espacio de interacción profesional...</p>
                 <p class="fragment"><em>... y también tomar cerveza!</em></p>
