Add presentation files

--- a/meetup-02 - frameworks & tools/demo/app/index.html
+++ b/meetup-02 - frameworks & tools/demo/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/user.js"></script>
         <script src="scripts/directives/panel.js"></script>
+        <script src="scripts/directives/myDirective.js"></script>
         <!-- endbuild -->
 </body>
 </html>
