--- a/meetup-02 - frameworks & tools/presentation/index.html
+++ b/meetup-02 - frameworks & tools/presentation/index.html
@@ -45,16 +45,15 @@
             <section>
                 <h2>En este encuentro</h2>
                 <ol>
-                <li>HTML5DevConf</li>
-                    <li>
-                        Workflow
-                        <ul>
-                            <li>Yeoman</li>
-                            <li>Grunt</li>
-                            <li>Bower</li>
-                        </ul>
-                    </li>
-                    <li>Server Side</li>
+                    <li>Presentación</li>
+                    <ul>
+                        <li>HTML5DevConf</li>
+                        <li>Workflow &amp; Automation</li>
+                    </ul>
+                    <li>Discusión</li>
+                    <ul>
+                        <li>Server Side</li>
+                    </ul>
                 </ol>
             </section>
 
@@ -62,7 +61,9 @@
                 <h2>HTML5DevConf</h2>
             </section>
 
-
+            <section>
+                <h2>Workflow &amp; Automation</h2>
+            </section>
 
             <section>
                 <h2>Yeoman</h2>
@@ -72,12 +73,22 @@
             </section>
 
             <section>
-                <h2>El workflow se compone de</h2>
+                <h3>Compuesto por</h3>
                 <ol>
                     <li>Yeoman: scaffolding de una nueva aplicación</li>
                     <li>Grunt: utilizado para el Build, Preview y Test de nuestro proyecto</li>
                     <li>Bower: manejador de dependencias</li>
                 </ol>
+            </section>
+
+            <section>
+                <h2>¿Por que Yeoman?</h2>
+                <p></p>
+                <ul>
+                    <li>Nos permite crear Web Applications de forma rápida, evitando todas las tareas manuales</li>
+                    <li>Utiliza los "standards" de la comunidad open-source</li>
+                    <li>Y además tenemos generadores!</li>
+                </ul>
             </section>
 
             <section>
@@ -89,6 +100,25 @@
             <section>
                 <h2>Generación</h2>
                 <pre><code class="data-trim">yo angular</code></pre>
+            </section>
+
+            <section>
+                <h2>Preview</h2>
+                <pre><code class="data-trim">grunt serve</code></pre>
+            </section>
+
+            <section>
+                <h2>Testing</h2>
+                <pre><code class="data-trim">grunt test</code></pre>
+            </section>
+
+            <section>
+                <h2>Build</h2>
+                <pre><code class="data-trim">grunt build</code></pre>
+            </section>
+
+            <section>
+                <h2>Gracias!</h2>
             </section>
         
             <section>
