--- a/meetup-02 - frameworks & tools/presentation/index.html
+++ b/meetup-02 - frameworks & tools/presentation/index.html
@@ -15,7 +15,7 @@
 
     <link rel="stylesheet" href="css/reveal.min.css">
     <link rel="stylesheet" href="css/theme/default.css" id="theme">
-    <link href="css/custom.css" rel="stylesheet" />
+    <link rel="stylesheet" href="css/styles.css">
 
     <!-- For syntax highlighting -->
     <link rel="stylesheet" href="lib/css/zenburn.css">
@@ -36,7 +36,7 @@
             <section>
                 <h1>AngularJS</h1>
                 <img src="/img/logo.png" alt="Angular">
-                <h3>#AngularJSBA en @Hexacta</h3>
+                <p>#AngularJSBA en @Hexacta</p>
                 <p>
                     <small>by <a href="https://twitter.com/juanma_ari">@juanma_ari</a> | <a href="http://www.meetup.com/AngularJS-Buenos-Aires/">meetup</a></small>
                 </p>
@@ -50,11 +50,16 @@
                         <li>HTML5DevConf</li>
                         <li>Workflow &amp; Automation</li>
                     </ul>
-                    <li>Discusión</li>
+                    <li>Sharing Experiencies</li>
                     <ul>
                         <li>Server Side</li>
+                        <li>... y demás experiencias de trabajo</li>
                     </ul>
                 </ol>
+            </section>
+
+            <section data-background="img/moscone.jpg">
+                <h2 class="black-title bg-white">HTML5DevConf</h2>
             </section>
 
             <section>
@@ -73,7 +78,17 @@
             </section>
 
             <section>
-                <h3>Compuesto por</h3>
+                <h2>¿Por que Yeoman?</h2>
+                <p></p>
+                <ul>
+                    <li>Nos permite crear Web Applications de forma rápida, evitando tareas manuales</li>
+                    <li>Utiliza herramientas "standards" de la comunidad open-source</li>
+                    <li>Y además, es extensible!</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>El Workflow se compone de:</h2>
                 <ol>
                     <li>Yeoman: scaffolding de una nueva aplicación</li>
                     <li>Grunt: utilizado para el Build, Preview y Test de nuestro proyecto</li>
@@ -82,43 +97,9 @@
             </section>
 
             <section>
-                <h2>¿Por que Yeoman?</h2>
-                <p></p>
-                <ul>
-                    <li>Nos permite crear Web Applications de forma rápida, evitando todas las tareas manuales</li>
-                    <li>Utiliza los "standards" de la comunidad open-source</li>
-                    <li>Y además tenemos generadores!</li>
-                </ul>
-            </section>
-
-            <section>
-                <h3>Instalación</h3>
-                <pre><code class="data-trim">npm install -g yo</code></pre>
-                <pre><code class="data-trim">npm install -g generator-angular</code></pre>
-            </section>
-            
-            <section>
-                <h2>Generación</h2>
-                <pre><code class="data-trim">yo angular</code></pre>
-            </section>
-
-            <section>
-                <h2>Preview</h2>
-                <pre><code class="data-trim">grunt serve</code></pre>
-            </section>
-
-            <section>
-                <h2>Testing</h2>
-                <pre><code class="data-trim">grunt test</code></pre>
-            </section>
-
-            <section>
-                <h2>Build</h2>
-                <pre><code class="data-trim">grunt build</code></pre>
-            </section>
-
-            <section>
-                <h2>Gracias!</h2>
+                <h2>LAB</h2>
+                <img src="/img/github.png" alt="Angular">
+                <p><a href="https://github.com/juanmanuelarias/angularjs-meetup/tree/master/meetup-02%20-%20frameworks%20%26%20tools/demo">https://github.com/juanmanuelarias/angularjs-meetup</a></p>
             </section>
         
             <section>
