add link to angular future talk

--- a/meetup-02 - frameworks & tools/presentation/index.html
+++ b/meetup-02 - frameworks & tools/presentation/index.html
@@ -63,7 +63,8 @@
             </section>
 
             <section>
-                <h2>HTML5DevConf</h2>
+                <h3>The Future of AngularJS</h3>
+                <p><a href="http://goo.gl/8oqVDn">http://goo.gl/8oqVDn</a></p>
             </section>
 
             <section>
